///////////// GIAO DICH NAP TIEN
syntax = "proto3";

option objc_class_prefix = "cal";
package Seller;
option php_generic_services = true;


// create cashin in by weshop
message WsCreateCahinRequest {
    string Param = 1;
}
message WsCreateCahinResponse {
    bool    Error       = 1;
    string  Message     = 2; // THONG BAO CHI TIET
    string  ErrorCode   = 3; // RA VE MA LOI NEU Error = TRUE
    string  Data        = 4; // CHUOI JSON DUMPS data User
}

// end  create cashin in by WsCreateTopupRequest


message CreateShipmentRequest {
    string Country  = 1; // Ma Quoc Gia
    int32  UserId   = 2; // User id
    int32  Source   = 3; // Nguon tao (weshop : 2)
    string Param    = 4;  // chuoi json dumps
}
message CreateShipmentResponse {
    bool    Error       = 1; // True, Fasle
    string  Message     = 2; //Message rror
    string  Data        = 3; //chuoi json dumps Data
}



message SyncProductRequest {
    string Data = 1;
}

message SyncProductResponse {
    bool    Error               = 1;
    string  Message             = 2;
}



service SellerService {

    // grpc create topup from weshop
    rpc WsCreateCahin (WsCreateCahinRequest) returns (WsCreateCahinResponse) {};
	rpc CreateShipment (CreateShipmentRequest) returns (CreateShipmentResponse) {};
	rpc SyncProduct(SyncProductRequest) returns (SyncProductResponse) {};


}
